# bc_python_aula09

./: .gitignore  README.md  etl.py  exemplo_00.py  pipeline.py  pyproject.toml  utils_log.py
